--- a/flower.html
+++ b/flower.html
@@ -28,7 +28,7 @@
             </nav>
         </section>
         <!-- About Section -->
-         <section class="lg:flex justify-center gap-3.5 mx-auto my-10">
+         <section class="lg:flex w-[1140px] justify-center gap-3.5 mx-auto my-10">
                 <div class="w-[570px] h-[299px] mb-0 mt-auto">
                     <h1 class="text-[50px] font-bold font-serif">ALWAYS <span class="text-[#E95A08]">FRESH</span> <br> <span class="text-[#E95A08]">FLOWERS</span></h1>
                     <p class="text-2xl font-[400] text-gray-400 font-inter mb-0">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
@@ -40,10 +40,10 @@
     </header>
     <main>
         <!-- Our plant and card -->
-        <section class="w-[1140px] h-[1187] mx-auto">
+        <section class="lg:w-[1140px] h-[1187] my-30 mx-auto">
             <div class="item-center text-center m-auto mb-10 p-0">
-                <h3 class="text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Our</span> Plants</h3>
-                <p class="w-[576px] lg:w-[1140px] content-center m-auto text-center item-center text-2xl text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h3 class="lg:text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Our</span> Plants</h3>
+                <p class="w-[576px] lg:w-[1140px] content-center m-auto text-center item-center text-2xl text-gray-400 font-inter lg:px-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
         <!-- Card Container -->
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-3">
