added the deal and fotter resposive

--- a/flower.html
+++ b/flower.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <section class="md:flex w-[1140px] justify-between pt-5 mx-auto">
+        <section class="md:flex w-[1140px] lg:justify-between pt-5 mx-auto">
         <!-- logo -->
             <div>
                 <img src="images/logo.png" alt="">
@@ -40,7 +40,7 @@
     </header>
     <main>
         <!-- Our plant and card -->
-        <section class="lg:w-[1140px] h-[1187] my-30 mx-auto">
+        <section class="lg:w-[1140px] mt-30 mx-auto">
             <div class="item-center text-center m-auto mb-10 p-0">
                 <h3 class="lg:text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Our</span> Plants</h3>
                 <p class="w-[576px] lg:w-[1140px] content-center m-auto text-center item-center text-2xl text-gray-400 font-inter lg:px-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -94,41 +94,44 @@
                     <img src="images/sample-flower-image.png" alt="">
                     <p class="mt-5">Lily Blossom</p>
                     <p class="text-2xl font-bold my-2">20 USD</p>
-                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mb-6 mr-5 text-[16px] font-[600]">ADD TO CART</button>
+                    <button class="bg-[#E95A08] text-white w-[270px] py-3 px-4 mr-5 text-[16px] font-[600]">ADD TO CART</button>
                 </div>
-                
             </div>
         </section>
         <!-- Banner for flower plant and lover -->
-         <section class="lg:max-w-6xl m-auto my-50 justify-center">
+         <section class="lg:w-[1140px] my-0 mx-auto justify-center">
             <div>
+                <!-- trusted sticker -->
                 <div>
-                    <img class="w-[286px] h-[286px] relative absolute left-85 top-40" src="images/trusted-badge.png" alt="">
+                    <img class="lg:w-[286px] h-[286px] relative absolute left-85 top-40" src="images/trusted-badge.png" alt="">
                 </div>
-                <div class="flex gap-15">
+                <!-- plant image -->
+                <div class="lg:flex gap-15">
                     <div>
                         <img class="w-[540px] h-[590px]" src="images/flower-store.png" alt="">
                     </div>
-                    <div class="w-[540px] h-[521px] text-[50px] font-bold mt-8">
-                        <h3 class="font-serif leading-tight">Flower & Plants Lover</h>
-                        <div class="text-2xl text-justify font-[400] font-inter text-gray-400 mt-3">
-                            <li class="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                            <li class="my-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                        </div>      
+                    <div class="w-[540px] h-[521px] text-[50px] font-bold mt-10">
+                        <h3 class="font-serif leading-tight text-center lg:text-left">
+                            Flower & Plants Lover
+                        </h3>
+                        <ul class="text-2xl text-justify space-y-2 font-[400] font-inter text-gray-400 mt-3">
+                            <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li class="list-disc ml-5 my-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        </ul>      
                     </div>
                 </div>
             </div>
          </section>
          <!-- Deal section banner -->
-          <section class="lg:max-w-6xl m-auto my-50 justify-center">
-                <div class="item-center text-center m-auto mb-10 px-[120px]">
+          <section class="lg:w-[1140px] mx-auto my-40 justify-center">
+                <div class="item-center text-center m-auto mb-10 lg:px-[120px]">
                     <h3 class="text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Latest </span>Deals</h3>
                     <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                 </div>
-                <div class="flex gap-10">
+                <div class="flex-row-1 gap-y-5 lg:flex lg:gap-10 justify-center">
             <!-- Left side 2 images -->
-                    <div class="grid grid-row-1 gap-5">
+                    <div class="grid grid-row-1 gap-5 justify-center">
                         <div class="bg-cover bg-center h-[200px] w-[366px] rounded-2xl opacity-80 content-center text-center" style="background-image: url('./images/deal-bloom.png');">
                             <h4 class="text-[20px] font-serif font-bold text-white">60% Off | Bloom Plant</h4>
                             <p class="text-2xl underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px] text-white">Shop Now</p>
@@ -139,30 +142,30 @@
                         </div>
                     </div>
             <!-- right side 1 image -->
-                    <div class="bg-cover bg-center h-[423px] w-[753px] opacity-80 rounded-2xl content-center text-center drop-shadow-lg" style="background-image: url('./images/deal-zabo.png');">
-                        <h4 class="text-[40px] shadow-lg font-serif font-bold text-white">25% Off | Zabo Plant</h4>
+                    <div class="mx-auto justify-center h-[200px] w-[366px] lg:h-[423px] lg:w-[753px] opacity-80 rounded-2xl content-center text-center drop-shadow-lg" style="background-image: url('./images/deal-zabo.png');">
+                        <h4 class="lg:text-[40px] shadow-lg font-serif font-bold text-white">25% Off | Zabo Plant</h4>
                         <p class="text-[28px] shadow-lg font-serif underline decoration-3 underline-offset-8 font-semibold text-underline-offset-[5px]  text-white">Shop Now</p>
                     </div>
                 </div>
           </section>
         <!-- Subscribed section style -->
           <section class="m-auto my-50">
-                <div class="lg:w-100% h-[533px] content-center text-center justify-center"style="background-image: url('./images/news-letter-bg.png');">
+                <div class="w-100% h-[533px] content-center text-center justify-center"style="background-image: url('./images/news-letter-bg.png');">
                 <h3 class="text-[50px] font-serif font-bold text-white">Join the colorful Bunch</h3>
-                <div class="flex m-auto content-center text-center justify-center">
+                <div class="lg:flex m-auto content-center text-center justify-center">
                     <div>
-                        <input type="text" placeholder="Write email" label="button" class="w-[640px] h-[50px] bg-white pl-5 mr-0">
+                        <input type="text" placeholder="Write email" label="button" class="lg:w-[640px] h-[50px] bg-white pl-5 mr-0">
                     </div>
-                        <button class="bg-[#E95A08] text-center text-white w-[186px] h-[50px] p-auto text-2xl m-0"  type="button" value="">Subscribed</button>
+                        <button class="bg-[#E95A08] text-center text-white lg:w-[186px] lg:h-[50px] p-3 text-[12px] lg:text-2xl m-0"  type="button" value="">Subscribed</button>
                     </div>
                 </div>  
           </section>
     </main>
     <footer>
         <!-- footer style -->
-        <section class="lg:max-w-6xl m-auto my-40">
-            <div class="flex m-auto gap-20 content-center item-center justify-center">
-                <div class="max-w-sm w-">
+        <section class="lg:max-w-6xl mx-auto my-40">
+            <div class="lg:flex m-auto lg:gap-20 content-center pl-10 item-center justify-center">
+                <div class="">
                     <img src="images/logo.png" alt="">
                     <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
                 </div>
