added the final resposive web site

--- a/flower.html
+++ b/flower.html
@@ -29,7 +29,7 @@
         </nav>
         <!-- About Section -->
          <section class="lg:flex-row-reverse lg:flex w-[1140px] justify-center gap-3.5 mx-auto my-10">
-                <div>
+                <div class="my-10">
                     <img class="w-[570px] h-[355px]" src="images/hero-flower.png" alt="">
                 </div>
                 <div class="w-[570px] h-[299px] mb-0 mt-auto text-center lg:text-left">
@@ -99,30 +99,32 @@
             </div>
         </section>
         <!-- Banner for flower plant and lover -->
-         <section class="lg:w-[1140px] lg:h-[597px] mx-auto justify-center">
-                <!-- trusted sticker -->
-                <div>
-                    <img class="hidden md:block lg:w-[286px] h-[286px] relative absolute left-85 top-60" src="images/trusted-badge.png" alt="">
-                </div>
-                <!-- plant image -->
-                <div class="lg:flex gap-15">
+         <section class="lg:w-[1140px] lg:h-[597px] lg:mb-20 mx-auto justify-center">
+               <div>
+                    <!-- trusted sticker -->
                     <div>
-                        <img class="w-[540px] h-[590px] mx-0 my-20 justify-center" src="images/flower-store.png" alt="">
+                        <img class="hidden md:block lg:w-[286px] h-[286px] relative absolute left-85 top-60" src="images/trusted-badge.png" alt="">
                     </div>
-                    <div class="w-[540px] h-[521px] text-[50px] font-bold mt-10">
-                        <h3 class="font-serif leading-tight text-center lg:text-left mt-22">
-                            Flower & Plants Lover
-                        </h3>
-                        <ul class="text-2xl text-justify space-y-2 font-[400] font-inter text-gray-400 mt-3">
-                            <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                            <li class="list-disc ml-5 my-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                            <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                        </ul>      
+                    <!-- plant image -->
+                    <div class="lg:flex gap-15">
+                        <div>
+                            <img class="w-[540px] h-[590px] mx-0 my-20 justify-center" src="images/flower-store.png" alt="">
+                        </div>
+                        <div class="w-[540px] h-[521px] text-[50px] font-bold mt-10">
+                            <h3 class="font-serif leading-tight text-center lg:text-left mt-22">
+                                Flower & Plants Lover
+                            </h3>
+                            <ul class="text-2xl text-justify space-y-2 font-[400] font-inter text-gray-400 mt-3">
+                                <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                                <li class="list-disc ml-5 my-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                                <li class="list-disc ml-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            </ul>      
+                        </div>
                     </div>
-                </div>
+               </div>
          </section>
          <!-- Deal section banner -->
-          <section class="lg:w-[1140px] mx-auto my-40 justify-center">
+          <section class="lg:w-[1140px] mx-auto lg:mt-40 pt-70 justify-center">
                 <div class="item-center text-center m-auto mb-10 lg:px-[120px]">
                     <h3 class="text-[60px] font-bold font-serif"><span class="text-[#E95A08]">Latest </span>Deals</h3>
                     <p class="text-2xl my-5 text-gray-400 font-inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
